--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "nunzziii",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://thebusinessgoose.github.io/nunzziii-website/",
   "dependencies": {
     "@material-ui/core": "^4.10.2",
     "@material-ui/icons": "^4.9.1",
@@ -26,7 +27,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
